@@ -24,10 +24,11 @@
     </parent>
 
     <groupId>io.jsonwebtoken</groupId>
-    <artifactId>jjwt</artifactId>
-    <version>0.10.0-SNAPSHOT</version>
-    <name>JSON Web Token support for the JVM</name>
-    <packaging>jar</packaging>
+    <artifactId>jjwt-root</artifactId>
+    <version>0.11.0-SNAPSHOT</version>
+    <name>JJWT</name>
+    <description>JSON Web Token support for the JVM and Android</description>
+    <packaging>pom</packaging>
     <url>https://github.com/jwtk/jjwt</url>
 
     <licenses>
@@ -78,6 +79,8 @@
 
     <properties>
 
+        <jjwt.root>${basedir}</jjwt.root>
+
         <maven.jar.version>3.0.2</maven.jar.version>
         <maven.compiler.version>3.6.1</maven.compiler.version>
 
@@ -85,55 +88,71 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <buildNumber>${user.name}-${maven.build.timestamp}</buildNumber>
 
-        <jackson.version>2.8.9</jackson.version>
+        <jackson.version>2.9.6</jackson.version>
+        <orgjson.version>20180130</orgjson.version>
 
         <!-- Optional Runtime Dependencies: -->
-        <bouncycastle.version>1.56</bouncycastle.version>
+        <bouncycastle.version>1.60</bouncycastle.version>
 
         <!-- Test Dependencies: Only required for testing when building.  Not required by users at runtime: -->
-        <groovy.version>2.4.11</groovy.version>
+        <groovy.version>2.5.1</groovy.version>
         <logback.version>1.2.3</logback.version>
-        <easymock.version>3.5</easymock.version>
+        <easymock.version>3.6</easymock.version>
         <junit.version>4.12</junit.version>
         <powermock.version>2.0.0-beta.5</powermock.version> <!-- necessary for Java 9 support -->
-        <failsafe.plugin.version>2.20.1</failsafe.plugin.version>
-        <surefire.plugin.version>2.20.1</surefire.plugin.version>
-        <clover.version>4.2.0</clover.version>
+        <failsafe.plugin.version>2.22.0</failsafe.plugin.version>
+        <surefire.plugin.version>2.22.0</surefire.plugin.version>
+        <clover.version>4.2.1</clover.version>
+        <clover.db>${jjwt.root}/target/clover/clover.db</clover.db>
+        <surefire.argLine />
 
     </properties>
 
+    <modules>
+        <module>api</module>
+        <module>impl</module>
+        <module>extensions</module>
+    </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-orgjson</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${orgjson.version}</version>
+            </dependency>
+
+            <!-- Used only during testing for PS256, PS384 and PS512 since JDK <= 10 doesn't support them: -->
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk15on</artifactId>
+                <version>${bouncycastle.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-
-        <!-- Optional Dependencies: -->
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
-            <version>${bouncycastle.version}</version>
-            <scope>compile</scope>
-            <optional>true</optional>
-        </dependency>
-
-        <!-- Provided scope: only used in Android environments - not downloaded as a transitive dependency.
-             This dependency is only a stub of the actual implementation, which means we can't use it at test time.
-             An Android environment is required to test for real. -->
-        <dependency>
-            <groupId>com.google.android</groupId>
-            <artifactId>android</artifactId>
-            <version>4.1.1.4</version>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
         <!-- Test Dependencies: Only required for testing when building.  Not required by users at runtime: -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -143,7 +162,7 @@
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
+            <artifactId>groovy</artifactId>
             <version>${groovy.version}</version>
             <scope>test</scope>
         </dependency>
@@ -180,6 +199,29 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.openclover</groupId>
+                    <artifactId>clover-maven-plugin</artifactId>
+                    <version>${clover.version}</version>
+                    <configuration>
+                        <cloverDatabase>${clover.db}</cloverDatabase>
+                        <!--
+                        cloverDatabase>${user.home}/.clover/${project.groupId}/jjwt/clover.db</cloverDatabase>
+                        <snapshot>${user.home}/.clover/${project.groupId}/jjwt/clover.snapshot</snapshot>
+                        <historyDir>${user.home}/.clover/${project.groupId}/jjwt</historyDir> -->
+                        <excludes>
+                            <exclude>io/jsonwebtoken/lang/*</exclude>
+                        </excludes>
+                        <methodPercentage>100.000000%</methodPercentage>
+                        <statementPercentage>100.000000%</statementPercentage>
+                        <conditionalPercentage>100.000000%</conditionalPercentage>
+                        <targetPercentage>100.000000%</targetPercentage>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -219,6 +261,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>${maven.jar.version}</version>
+                <!--
                 <configuration>
                     <archive>
                         <manifest>
@@ -230,50 +273,42 @@
                         </manifestFile>
                     </archive>
                 </configuration>
+                -->
             </plugin>
             <!-- Allow for writing tests in Groovy: -->
             <plugin>
-                <groupId>org.codehaus.gmaven</groupId>
-                <artifactId>gmaven-plugin</artifactId>
-                <version>1.5</version>
-                <configuration>
-                    <providerSelection>2.0</providerSelection>
-                    <source />
-                </configuration>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
+                <version>1.6.1</version>
                 <executions>
                     <execution>
                         <goals>
+                            <goal>addSources</goal>
+                            <goal>addTestSources</goal>
                             <goal>generateStubs</goal>
                             <goal>compile</goal>
                             <goal>generateTestStubs</goal>
-                            <goal>testCompile</goal>
+                            <goal>compileTests</goal>
+                            <goal>removeStubs</goal>
+                            <goal>removeTestStubs</goal>
                         </goals>
                     </execution>
                 </executions>
                 <dependencies>
                     <dependency>
-                        <groupId>org.codehaus.gmaven.runtime</groupId>
-                        <artifactId>gmaven-runtime-2.0</artifactId>
-                        <version>1.5</version>
-                        <exclusions>
-                            <exclusion>
-                                <groupId>org.codehaus.groovy</groupId>
-                                <artifactId>groovy-all</artifactId>
-                            </exclusion>
-                        </exclusions>
-                    </dependency>
-                    <dependency>
                         <groupId>org.codehaus.groovy</groupId>
-                        <artifactId>groovy-all</artifactId>
+                        <artifactId>groovy</artifactId>
                         <version>${groovy.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
-            <!-- Override OSS parent to support Java 9. Doesn't hurt Java 8 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.plugin.version}</version>
+                <configuration>
+                    <argLine>${surefire.argLine}</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -303,17 +338,16 @@
             <plugin>
                 <groupId>org.openclover</groupId>
                 <artifactId>clover-maven-plugin</artifactId>
-                <version>${clover.version}</version>
+                <!--
                 <configuration>
                     <excludes>
-                        <exclude>**/*Test*</exclude>
-                        <!-- leaving out lang as it mostly comes from other sources -->
+                        <!- - leaving out lang as it mostly comes from other sources - ->
                         <exclude>io/jsonwebtoken/lang/*</exclude>
                     </excludes>
-                    <methodPercentage>100%</methodPercentage>
-                    <statementPercentage>100%</statementPercentage>
-                    <conditionalPercentage>100%</conditionalPercentage>
-                    <targetPercentage>100%</targetPercentage>
+                    <methodPercentage>100.000000%</methodPercentage>
+                    <statementPercentage>100.000000%</statementPercentage>
+                    <conditionalPercentage>100.000000%</conditionalPercentage>
+                    <targetPercentage>100.000000%</targetPercentage>
                 </configuration>
                 <executions>
                     <execution>
@@ -321,11 +355,12 @@
                         <phase>test</phase>
                         <goals>
                             <goal>instrument</goal>
-                            <goal>check</goal>
+                            <goal>aggregate</goal>
                             <goal>clover</goal>
+                            <goal>check</goal>
                         </goals>
                     </execution>
-                </executions>
+                </executions> -->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -446,13 +481,23 @@
     </build>
     <profiles>
         <profile>
-            <id>jdk8</id>
+            <id>nonJDK7</id>
             <activation>
-                <jdk>1.8</jdk>
+                <jdk>[1.8,)</jdk>
             </activation>
             <properties>
-                <!-- Turn off JDK 8's lint checks: -->
+                <!-- Turn off JDK >= 8's lint checks: -->
                 <additionalparam>-Xdoclint:none</additionalparam>
+            </properties>
+        </profile>
+        <profile>
+            <!-- Added profile to address https://github.com/jwtk/jjwt/issues/364 -->
+            <id>jdk9AndLater</id>
+            <activation>
+                <jdk>[1.9,)</jdk>
+            </activation>
+            <properties>
+                <surefire.argLine>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED</surefire.argLine>
             </properties>
         </profile>
         <profile>
